Use pandas<2 for Diviner <= 0.1.1 (#8611)
* pin

Signed-off-by: dbczumar <corey.zumar@databricks.com>

* Tweak

Signed-off-by: dbczumar <corey.zumar@databricks.com>

---------

Signed-off-by: dbczumar <corey.zumar@databricks.com>

--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -447,6 +447,8 @@ diviner:
       # Avoid holidays 0.25 due to https://github.com/dr-prodigy/python-holidays/issues/1200
       ">= 0.0": ["cmdstanpy!=1.0.2", "holidays!=0.25"]
       "<= 0.1.0": ["pmdarima<2.0.0"]
+      # Diviner <= 0.1.1 isn't compatible with pandas>=2
+      "<= 0.1.1": ["pandas<2"]
     run: |
       pytest tests/diviner/test_diviner_model_export.py
 
