add johnsnowlabs flavor  (#8556)
* add johnsnowlabs flavor Signed-off-by: Christian Kasim Loan christian.kasim.loan@gmail.com

Signed-off-by: Christian Kasim Loan <christian.kasim.loan@gmail.com>

* johnsnowlabs flavor review resolution  Signed-off-by: Christian Kasim Loan christian.kasim.loan@gmail.com

Signed-off-by: Christian Kasim Loan <christian.kasim.loan@gmail.com>

* johnsnowlabs flavor review resolution (2nd round)   Signed-off-by: Christian Kasim Loan christian.kasim.loan@gmail.com

Signed-off-by: Christian Kasim Loan <christian.kasim.loan@gmail.com>

* johnsnowlabs flavor review resolution: remove hardcoded secret setting   Signed-off-by: Christian Kasim Loan christian.kasim.loan@gmail.com

Signed-off-by: Christian Kasim Loan <christian.kasim.loan@gmail.com>

* add johnsnowlabs flavor to ci Signed-off-by: Christian Kasim Loan christian.kasim.loan@gmail.com

Signed-off-by: Christian Kasim Loan <christian.kasim.loan@gmail.com>

* Single Secret variable for johnsnowlabs flavor, and review resolutions Signed-off-by: Christian Kasim Loan christian.kasim.loan@gmail.com

Signed-off-by: Christian Kasim Loan <christian.kasim.loan@gmail.com>

* auto-log stub and CI fixes for johnsnowlabs flavor Signed-off-by: Christian Kasim Loan christian.kasim.loan@gmail.com

Signed-off-by: Christian Kasim Loan <christian.kasim.loan@gmail.com>

* setup tests

Signed-off-by: harupy <hkawamura0130@gmail.com>

* CI fix bad var usage for johnsnowlabs flavor tests Signed-off-by: Christian Kasim Loan christian.kasim.loan@gmail.com

Signed-off-by: Christian Kasim Loan <christian.kasim.loan@gmail.com>

* Fix

Signed-off-by: harupy <hkawamura0130@gmail.com>

* black

Signed-off-by: harupy <hkawamura0130@gmail.com>

* add experimental

Signed-off-by: harupy <hkawamura0130@gmail.com>

* Remove johnsnowlabs

Signed-off-by: harupy <hkawamura0130@gmail.com>

* add johnsnowlabs back to ml dependencies
Signed-off-by: Christian Kasim Loan <chri

--- a/.github/workflows/cross-version-tests.yml
+++ b/.github/workflows/cross-version-tests.yml
@@ -198,6 +198,7 @@ jobs:
           MLFLOW_CONDA_HOME: /usr/share/miniconda
           SPARK_LOCAL_IP: localhost
           PACKAGE_VERSION: ${{ matrix.version }}
+          JOHNSNOWLABS_LICENSE_JSON: ${{ secrets.JOHNSNOWLABS_LICENSE_JSON }}
         run: |
           export MLFLOW_HOME=$(pwd)
           ${{ matrix.run }}
