move to gunicorn as process manager
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/requirements/gateway-requirements.yaml
+++ b/requirements/gateway-requirements.yaml
@@ -11,5 +11,13 @@ fastapi:
   max_major_version: 0
 
 uvicorn:
-  pip_release: uvicorn
+  pip_release: uvicorn[standard]
   max_major_version: 0
+
+watchfiles:
+  pip_release: watchfiles
+  max_major_version: 0
+
+psutil:
+  pip_release: psutil
+  max_major_version: 5
