--- a/examples/gateway/config.yaml
+++ b/examples/gateway/config.yaml
@@ -1,8 +1,9 @@
-- name: gpt-3.5-turbo-completions
-  type: llm/v1/completions
-  model:
-    provider: openai
-    name: gpt-3.5-turbo
-    config:
-      openai_api_base: https://api.openai.com/v1
-      openai_api_key: $OPENAI_API_KEY
+routes:
+  - name: gpt-3.5-turbo-completions
+    type: llm/v1/completions
+    model:
+      provider: openai
+      name: gpt-3.5-turbo
+      config:
+        openai_api_base: https://api.openai.com/v1
+        openai_api_key: $OPENAI_API_KEY
