--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -38,16 +38,12 @@ jobs:
     timeout-minutes: 120
     if: github.event_name != 'schedule' || github.repository == 'mlflow/mlflow'
     steps:
-      - name: Remove unneeded libraries
-        run: |
-          sudo rm -rf "$AGENT_TOOLSDIRECTORY"
-          sudo rm -rf /usr/share/dotnet
-          sudo rm -rf /usr/local/lib/android
       - uses: actions/checkout@v3
         with:
           repository: ${{ github.event.inputs.repository }}
           ref: ${{ github.event.inputs.ref }}
           submodules: recursive
+      - uses: ./.github/actions/free-disk-space
       - name: Check diff
         id: check-diff
         if: github.event_name == 'pull_request'
