--- a/examples/gateway/config.yaml
+++ b/examples/gateway/config.yaml
@@ -1,6 +1,6 @@
 routes:
-  - name: gpt-3.5-turbo-completions
-    type: llm/v1/completions
+  - name: gpt-3.5-chat
+    type: llm/v1/chat
     model:
       provider: openai
       name: gpt-3.5-turbo
