--- a/examples/gateway/config.yaml
+++ b/examples/gateway/config.yaml
@@ -1,9 +1,27 @@
 routes:
-  - name: gpt-3.5-chat
+  - name: chat
     type: llm/v1/chat
     model:
       provider: openai
       name: gpt-3.5-turbo
+      config:
+        openai_api_base: https://api.openai.com/v1
+        openai_api_key: $OPENAI_API_KEY
+
+  - name: completions
+    type: llm/v1/completions
+    model:
+      provider: openai
+      name: text-davinci-003
+      config:
+        openai_api_base: https://api.openai.com/v1
+        openai_api_key: $OPENAI_API_KEY
+
+  - name: embeddings
+    type: llm/v1/embeddings
+    model:
+      provider: openai
+      name: text-embedding-ada-002
       config:
         openai_api_base: https://api.openai.com/v1
         openai_api_key: $OPENAI_API_KEY
