Detect untracked files
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/.github/workflows/cross-version-tests.yml
+++ b/.github/workflows/cross-version-tests.yml
@@ -198,3 +198,4 @@ jobs:
         run: |
           export MLFLOW_HOME=$(pwd)
           ${{ matrix.run }}
+      - uses: ./.github/actions/untrakced
