--- a/.github/workflows/recipe.yml
+++ b/.github/workflows/recipe.yml
@@ -57,6 +57,7 @@ jobs:
         run: |
           export MLFLOW_HOME=$(pwd)
           pytest tests/recipes
+      - uses: ./.github/actions/untrakced
 
   recipes-windows:
     runs-on: windows-latest
@@ -90,3 +91,4 @@ jobs:
           # Run recipes tests
           export MLFLOW_HOME=$(pwd)
           pytest tests/recipes
+      - uses: ./.github/actions/untrakced
