Skip free-disk-space if not transformers
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/.github/workflows/cross-version-tests.yml
+++ b/.github/workflows/cross-version-tests.yml
@@ -117,6 +117,7 @@ jobs:
           repository: ${{ github.event.inputs.repository }}
           ref: ${{ github.event.inputs.ref }}
       - uses: ./.github/actions/free-disk-space
+        if: matrix.package == 'transformers'
       - name: Get python version
         id: get-python-version
         run: |
