--- a/.github/workflows/gateway.yml
+++ b/.github/workflows/gateway.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -e .[gateway]
-          pip install pytest pytest-timeout pytest-asyncio httpx openai
+          pip install pytest pytest-timeout pytest-asyncio httpx aiohttp
       - name: Run tests
         run: |
           pytest tests/gateway
