--- a/.github/workflows/recipe.yml
+++ b/.github/workflows/recipe.yml
@@ -78,7 +78,7 @@ jobs:
           pip uninstall -y datasets
       - name: Download Hadoop winutils for Spark
         run: |
-          git clone https://github.com/cdarlint/winutils
+          git clone https://github.com/cdarlint/winutils /tmp/winutils
       - name: Run tests
         env:
           # The default pooling implmentation 'QueuePool' can lead to errors on Windows when
@@ -86,7 +86,7 @@ jobs:
           MLFLOW_SQLALCHEMYSTORE_POOLCLASS: "NullPool"
         run: |
           # Set Hadoop environment variables required for testing Spark integrations on Windows
-          export HADOOP_HOME=`realpath winutils/hadoop-3.2.2`
+          export HADOOP_HOME=/tmp/winutils/hadoop-3.2.2
           export PATH=$PATH:$HADOOP_HOME/bin
           # Run recipes tests
           export MLFLOW_HOME=$(pwd)
