Detect untracked files (#8717)
* Detect untracked files

Signed-off-by: harupy <hkawamura0130@gmail.com>

* Fix typo

Signed-off-by: harupy <hkawamura0130@gmail.com>

* Remove untracked files

Signed-off-by: harupy <hkawamura0130@gmail.com>

---------

Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/.github/workflows/cross-version-tests.yml
+++ b/.github/workflows/cross-version-tests.yml
@@ -199,3 +199,4 @@ jobs:
         run: |
           export MLFLOW_HOME=$(pwd)
           ${{ matrix.run }}
+      - uses: ./.github/actions/untracked
