--- a/examples/gateway/config.yaml
+++ b/examples/gateway/config.yaml
@@ -12,7 +12,7 @@ routes:
     type: llm/v1/completions
     model:
       provider: openai
-      name: text-davinci-003
+      name: gpt-3.5-turbo
       config:
         openai_api_base: https://api.openai.com/v1
         openai_api_key: $OPENAI_API_KEY
