remove lightgbm & sentence-transformers repo after installation
Signed-off-by: Serena Ruan <serena.rxy@gmail.com>

--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -558,7 +558,7 @@ sentence_transformers:
   package_info:
     pip_release: "sentence-transformers"
     install_dev: |
-      pip install -e git+https://github.com/UKPLab/sentence-transformers#egg=sentence-transformers
+      pip install git+https://github.com/UKPLab/sentence-transformers#egg=sentence-transformers
   models:
     minimum: "2.2.2"
     maximum: "2.2.2"
