remove lightgbm repo
Signed-off-by: Serena Ruan <serena.rxy@gmail.com>

--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -148,6 +148,8 @@ lightgbm:
       git clone --recursive https://github.com/microsoft/LightGBM --depth=1 --branch master
       cd LightGBM
       bash build-python.sh install
+      cd ..
+      rm -rf LightGBM
 
   models:
     minimum: "2.3.1"
