--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -145,11 +145,11 @@ lightgbm:
   package_info:
     pip_release: "lightgbm"
     install_dev: |
-      git clone --recursive https://github.com/microsoft/LightGBM --depth=1 --branch master
-      cd LightGBM
+      git clone --recursive https://github.com/microsoft/LightGBM --depth=1 --branch master /tmp/lgbm
+      cd /tmp/lgbm/LightGBM
       bash build-python.sh install
-      cd ..
-      rm -rf LightGBM
+      cd ~
+      rm -rf /tmp/lgbm
 
   models:
     minimum: "2.3.1"
