remove lightgbm & sentence-transformers repo after installation (#8772)
* remove lightgbm & sentence-transformers repo after installation

Signed-off-by: Serena Ruan <serena.rxy@gmail.com>

* remove lightgbm repo

Signed-off-by: Serena Ruan <serena.rxy@gmail.com>

* clone lightgbm to /tmp folder

Signed-off-by: Serena Ruan <serena.rxy@gmail.com>

* fix git clone path

Signed-off-by: Serena Ruan <serena.rxy@gmail.com>

* remove clean up lightgbm repo

Signed-off-by: Serena Ruan <serena.rxy@gmail.com>

---------

Signed-off-by: Serena Ruan <serena.rxy@gmail.com>

--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -146,8 +146,8 @@ lightgbm:
   package_info:
     pip_release: "lightgbm"
     install_dev: |
-      git clone --recursive https://github.com/microsoft/LightGBM --depth=1 --branch master
-      cd LightGBM
+      git clone --recursive https://github.com/microsoft/LightGBM --depth=1 --branch master /tmp/LightGBM
+      cd /tmp/LightGBM
       bash build-python.sh install
 
   models:
@@ -559,7 +559,7 @@ sentence_transformers:
   package_info:
     pip_release: "sentence-transformers"
     install_dev: |
-      pip install -e git+https://github.com/UKPLab/sentence-transformers#egg=sentence-transformers
+      pip install git+https://github.com/UKPLab/sentence-transformers#egg=sentence-transformers
   models:
     minimum: "2.2.2"
     maximum: "2.2.2"
