Only allow harupy
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/.github/workflows/ask-ai.yml
+++ b/.github/workflows/ask-ai.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: startsWith(github.event.comment.body, '$ai')
+    if: startsWith(github.event.comment.body, '$ai') || github.triggering_actor != 'harupy'
     steps:
       - uses: actions/checkout@v3
       - uses: harupy/ask-ai@master
