--- a/examples/gateway/config.yaml
+++ b/examples/gateway/config.yaml
@@ -1,6 +1,6 @@
 routes:
   - name: chat
-    type: llm/v1/chat
+    route_type: llm/v1/chat
     model:
       provider: openai
       name: gpt-3.5-turbo
@@ -9,7 +9,7 @@ routes:
         openai_api_key: $OPENAI_API_KEY
 
   - name: completions
-    type: llm/v1/completions
+    route_type: llm/v1/completions
     model:
       provider: openai
       name: gpt-3.5-turbo
@@ -18,7 +18,7 @@ routes:
         openai_api_key: $OPENAI_API_KEY
 
   - name: embeddings
-    type: llm/v1/embeddings
+    route_type: llm/v1/embeddings
     model:
       provider: openai
       name: text-embedding-ada-002
