Add script to generate docs
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -68,9 +68,13 @@ rdocs:
 test-examples:
 	@pytest --no-cov .examples
 
+.PHONY: gateway-api-docs
+gateway-api-docs:
+	@python gateway_api_docs.py
+
 # Builds only the RST-based documentation (i.e., everything but Java & R docs)
 .PHONY: rsthtml
-rsthtml:
+rsthtml: gateway-api-docs
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
