--- a/.github/workflows/recipe-template.yml
+++ b/.github/workflows/recipe-template.yml
@@ -48,6 +48,7 @@ jobs:
         run: |
           echo "::add-matcher::.github/workflows/matchers/pylint.json"
           echo "::add-matcher::.github/workflows/matchers/black.json"
+          echo "::add-matcher::.github/workflows/matchers/ruff.json"
       - name: Install dependencies
         run: |
           pip install -r ${{ github.event.inputs.repository }}/requirements/lint-requirements.txt
