--- a/.github/workflows/cross-version-tests.yml
+++ b/.github/workflows/cross-version-tests.yml
@@ -190,6 +190,7 @@ jobs:
       - name: Check package versions
         run: |
           python dev/show_package_release_dates.py
+      - uses: ./.github/actions/pipdeptree
       - name: Run tests
         env:
           MLFLOW_CONDA_HOME: /usr/share/miniconda
