--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -19,6 +19,7 @@ concurrency:
 
 jobs:
   js:
+    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     strategy:
       fail-fast: false
       matrix:
