--- a/.github/workflows/protos.yml
+++ b/.github/workflows/protos.yml
@@ -19,6 +19,7 @@ defaults:
 
 jobs:
   protos:
+    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
