--- a/.github/workflows/recipe.yml
+++ b/.github/workflows/recipe.yml
@@ -40,6 +40,7 @@ env:
 
 jobs:
   recipes:
+    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     timeout-minutes: 120
     steps:
@@ -60,6 +61,7 @@ jobs:
       - uses: ./.github/actions/untracked
 
   recipes-windows:
+    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
