--- a/.github/workflows/requirements.yml
+++ b/.github/workflows/requirements.yml
@@ -40,7 +40,7 @@ jobs:
   skinny:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: github.event_name != 'schedule' || github.repository == 'mlflow/mlflow'
+    if: github.event_name != 'schedule' || github.repository == 'mlflow/mlflow' || (github.event_name != 'pull_request' || github.event.pull_request.draft == false)
     steps:
       - uses: actions/checkout@v3
         with:
