--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -21,7 +21,7 @@ jobs:
   r:
     runs-on: ubuntu-latest
     timeout-minutes: 120
-    if: github.event_name != 'schedule' || github.repository == 'mlflow/mlflow' || (github.event_name != 'pull_request' || github.event.pull_request.draft == false)
+    if: github.event_name == 'push' || (github.event_name == 'schedule' && github.repository == 'mlflow/mlflow') || (github.event_name == 'pull_request' && github.event.pull_request.draft == true)
     defaults:
       run:
         shell: bash --noprofile --norc -exo pipefail {0}
