--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -240,6 +240,7 @@ jobs:
           mvn clean package -q
 
   flavors:
+    if: github.event_name != 'pull_request' || github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     timeout-minutes: 120
     steps:
