--- a/.github/workflows/labeling.yml
+++ b/.github/workflows/labeling.yml
@@ -16,6 +16,7 @@ defaults:
 
 jobs:
   labeling:
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     timeout-minutes: 120
     steps:
