--- a/.github/workflows/advice.yml
+++ b/.github/workflows/advice.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   notify:
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
