Remove useless condition
Signed-off-by: harupy <hkawamura0130@gmail.com>

--- a/.github/workflows/requirements.yml
+++ b/.github/workflows/requirements.yml
@@ -25,7 +25,7 @@ jobs:
   skinny:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: github.event_name == 'workflow_dispatch' || (github.event_name == 'schedule' && github.repository == 'mlflow/mlflow') || (github.event_name == 'pull_request' && github.event.pull_request.draft == false)
+    if: (github.event_name == 'schedule' && github.repository == 'mlflow/mlflow') || (github.event_name == 'pull_request' && github.event.pull_request.draft == false)
     steps:
       - uses: actions/checkout@v3
         with:
