--- a/mlflow/ml-package-versions.yml
+++ b/mlflow/ml-package-versions.yml
@@ -526,6 +526,9 @@ transformers:
           "setfit",
           "optuna",
         ]
+      # tensorflow 2.13.0 made all Keras private functions inaccessible. transformers versions
+      # prior to 4.30.0 are incompatible with this breaking change in Keras.
+      "< 4.30.0": ["tensorflow<2.13.0"]
     run: |
       pytest tests/transformers/test_transformers_autolog.py
 
