--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -83,7 +83,7 @@ jobs:
           pip install -e $(git rev-parse --show-toplevel)
           H2O_VERSION=$(Rscript -e "print(packageVersion('h2o'))" | grep -Eo '[0-9][0-9.]+')
           # test-keras-model.R fails with tensorflow>=2.13.0
-          pip install xgboost tensorflow<2.13.0 "h2o==$H2O_VERSION"
+          pip install xgboost 'tensorflow<2.13.0' "h2o==$H2O_VERSION"
           Rscript -e 'source(".install-mlflow-r.R", echo=TRUE)'
       - name: Run tests
         env:
