--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -82,7 +82,8 @@ jobs:
         run: |
           pip install -e $(git rev-parse --show-toplevel)
           H2O_VERSION=$(Rscript -e "print(packageVersion('h2o'))" | grep -Eo '[0-9][0-9.]+')
-          pip install xgboost tensorflow "h2o==$H2O_VERSION"
+          # test-keras-model.R fails with tensorflow>=2.13.0
+          pip install xgboost 'tensorflow<2.13.0' "h2o==$H2O_VERSION"
           Rscript -e 'source(".install-mlflow-r.R", echo=TRUE)'
       - name: Run tests
         env:
